--- a/assignment-1/css file/style.css
+++ b/assignment-1/css file/style.css
@@ -192,7 +192,7 @@
   margin-bottom: 15px;
   font-weight: normal;
 }
-.Contact-button {  font-family: "roboto";submit
+.Contact-button {  font-family: "roboto";
 
 .person-information-2 {
   max-width: 23%;
