--- a/assignment-1/css file/style.css
+++ b/assignment-1/css file/style.css
@@ -10,10 +10,9 @@
 }
 @font-face {
   font-family: "roboto";
-  src: (../fonts/Roboto-Regular.ttf);
+  src: url(../fonts/Roboto-Regular.ttf);
   font-weight: 400;
 }
-
 .main-wrapper {
   max-width: 1366px;
   margin: auto;
@@ -70,7 +69,7 @@
   border-bottom: 2px solid #ededed;
 }
 .project-section-heading h1 {
-  font-family: roboto; 
+  font-family: roboto;
   font-weight: 600;
 }
 .project-section-img-wrapper {
@@ -179,27 +178,26 @@
   margin-left: 30px;
   float: left;
 }
-.person-information-1 img {  font-family: "roboto";submit
+.person-information-1 img {
+  font-family: "roboto";
+}
 
 .name {
   margin-top: 10px;
   font-size: 23px;
   font-weight: normal;
 }
-.title {  font-family: "roboto";submit
-
+.title {
+  font-family: "roboto";
   font-size: 15px;
   margin-bottom: 15px;
   font-weight: normal;
 }
-.Contact-button {  font-family: "roboto";
-
 .person-information-2 {
   max-width: 23%;
   margin-left: 30px;
   float: left;
-}  font-family: "roboto";submit
-
+  font-family: "roboto";
   margin-top: 95px;
   margin-bottom: 25px;
   padding-bottom: 30px;
