--- a/20-09-2021/green-building-tamplet/assets/css/style.css
+++ b/20-09-2021/green-building-tamplet/assets/css/style.css
@@ -2,29 +2,40 @@
   margin: 0px;
   padding: 0px;
 }
-.header-wrapper {
+
+@font-face{
+	src: url(Poppins-Regular.ttf);
+	font-family:'poppins' sans-serif;
+	font-weight:400;
 }
 .header {
-  padding-top: 20px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-top: 18px;
+  padding-left: 110px;
+  padding-right: 110px;
 }
 .logo img {
-  height: 40px;
+  height: 35px;
   float: left;
+  display:inline-block;
+  margin-top:5px;
 }
 .ul-wrapper {
   float: right;
   padding-top: 20px;
-  font-family: arial, sans-serif;
+  font-weight:500;
+  font-size:17px;
 }
 .ul-wrapper li {
   display: inline;
-  margin-right: 25px;
+  margin-right: 35px;
   color: #000000;
+  font-family:arial, sans-serif;
 }
 .ul-wrapper li a {
   color: black;
+}
+.ul-wrapper li .active{
+	color:#C11B67;
 }
 .clear {
   clear: both;
@@ -35,34 +46,40 @@
 .section-1 {
   height: 400px;
   width: 1425px;
-  background-color:#F7AD46;
+  background-color:#E99035;
 }
 .section-2 {
-  height: 530px;
+  height: 535px;
   width: 1425px;
   background-color: #e7e7e7;
   position: relative;
 }
 .main-section {
-  width: 870px;
-  height: 820px;
+  width: 830px;
   position: absolute;
   margin-left: 315px;
-  top: -65%;
+  top: -60%;
   background-color: #ffffff;
+  padding-bottom:8px;
+  box-shadow: 1px 1px 1px #ffffff;
+  margin-bottom:10px;
 }
-.main-section img {
-  height: 60%;
+.image-wrapper{
+	height:500px;
+}
+.image-wrapper img {
   width: 100%;
+  height:100%;
 }
 .parent-name {
-  font-family: arial, sans-serif;
+  font-family: poppins, sans-serif;
   text-align: center;
-  font-size: 17px;
-  font-weight: 400;
+  font-size: 19px;
+  font-weight: 500;
   letter-spacing: 2px;
   margin-top: 30px;
   text-transform: uppercase;
+  letter-spacing:2px;
 }
 .company-name {
   text-align: center;
@@ -79,23 +96,24 @@
   margin-right: 30px;
   margin-top: 20px;
   font-family: poppins, sans-serif;
-  line-height: 30px;
-  font-size: 16px;
+  line-height: 24px;
+  font-size: 18px;
 }
 .parent-company {
   text-align: center;
   margin-top: 25px;
   margin-bottom: 25px;
+  font-family: poppins, sans-serif;
 }
 .button {
   height: 30px;
-  width: 175px;
+  width: 200px;
   border: 1px solid #000000;
   background-color: #000000;
   color: #ffffff;
   text-align: center;
   padding-top: 10px;
-  margin: 0 auto;
+  margin:0 auto; 
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 15px;
@@ -106,21 +124,29 @@
 }
 .footer {
   width: 100%;
-  height: 230px;
+  height: 150px;
   background-color: #2F2F2F;
   text-align: center;
   color: #ffffff;
-  padding-top: 60px;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  line-height:25px;
+  font-family: poppins, sans-serif;
 }
 .footer a {
   color: pink;
+  text-decoration:underline;
 }
 .website-link {
-  margin-top: 150px;
+  margin-top: 100px;
 }
-a:link {
-  text-decoration: none;
+a:link{
+	text-decoration:none;
 }
 a:hover {
-  color: pink;
+  color: red;
+}
+#link{
+	text-decoration: underline;
+	color: #000000;
 }
