--- a/practice-tamplate/assignment-1/assets/css/style.css
+++ b/practice-tamplate/assignment-1/assets/css/style.css
@@ -2,51 +2,48 @@
   margin: 0px;
   padding: 0px;
 }
-
-@font-face {
-  src: url(Poppins-Regular.ttf);
-  font-family: "poppins" sans-serif;
-  font-weight: 400;
+@font-face{
+	src: url(Poppins-Regular.ttf);
+	font-family:'poppins' sans-serif;
+	font-weight:400;
 }
-.tamplate-wrapper {
-  width: 1080px;
+.tamplate-wrapper{
+width:1080px;
 }
 /**nav section start here **/
-.header {
+.nav-logo-wrapper {
   padding-top: 18px;
-  padding-right: 130px;
+  padding-right:130px;
   padding-left: 110px;
-  padding-right: 110px;
 }
-.logo img {
+.nav-logo img {
   height: 35px;
   float: left;
-  display: inline-block;
-  margin-top: 5px;
+  display:inline-block;
+  margin-top:5px;
 }
 .ul-wrapper {
-  float: right;
   padding-top: 20px;
-  font-weight: 500;
-  font-size: 17px;
+  font-weight:500;
+  font-size:17px;
 }
-.ul-wrapper li {
-  display: inline;
+.ul-wrapper .nav-item {
+ display:inline;
   margin-right: 35px;
   color: #000000;
-  font-family: arial, sans-serif;
-  float: right;
+  font-family:arial, sans-serif;
+  float:right;
 }
-.ul-wrapper li a {
+.ul-wrapper .nav-link {
   color: black;
-  text-decoration: none;
+  text-decoration:none;
 }
-.ul-wrapper li .active {
-  color: #c11b67;
-  text-decoration: none;
+.ul-wrapper .nav-item .active{
+	color:#C11B67;
+	text-decoration:none;
 }
-.nav-link:hover {
-  color: #f48aa7;
+.nav-link:hover{
+	color:#F48AA7;
 }
 .clear {
   clear: both;
@@ -59,7 +56,7 @@
 .section-1 {
   height: 400px;
   width: 1425px;
-  background-color: #e99035;
+  background-color:#F89143;
 }
 .section-2 {
   height: 535px;
@@ -68,21 +65,21 @@
   position: relative;
 }
 .main-section {
-  width: 830px;
+  width: 56%;
   position: absolute;
-  margin-left: 315px;
-  top: -60%;
+  left:23%;
+  top: -62%;
   background-color: #ffffff;
-  padding-bottom: 8px;
-  box-shadow: 1px 1px 1px #ffffff;
-  margin-bottom: 10px;
+  padding-bottom:10px;
+  box-shadow: 1px -1px #7A7A7A;
+  margin-bottom:10px;
 }
-.image-wrapper {
-  height: 500px;
+.header-banner-wrapper{
+	height:500px;
 }
-.image-wrapper img {
+.header-banner-wrapper img {
   width: 100%;
-  height: 100%;
+  height:100%;
 }
 .parent-name {
   font-family: poppins, sans-serif;
@@ -92,7 +89,7 @@
   letter-spacing: 2px;
   margin-top: 30px;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing:2px;
 }
 .company-name {
   text-align: center;
@@ -107,18 +104,27 @@
   text-align: center;
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 20px;
+  margin-top: 33px;
   font-family: poppins, sans-serif;
   line-height: 24px;
   font-size: 18px;
 }
 .parent-company {
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 33px;
+  margin-bottom: 33px;
   font-family: poppins, sans-serif;
 }
-.button {
+.parent-company .link{
+	color:#000000;
+	border-bottom: 1px solid #000000;
+	padding-bottom:3px;
+	text-decoration:none;
+}
+.link:hover{
+	color:#F48AA7;
+}
+.button  {
   height: 30px;
   width: 200px;
   border: 1px solid #000000;
@@ -126,46 +132,39 @@
   color: #ffffff;
   text-align: center;
   padding-top: 10px;
-  margin: 0 auto;
+  margin:0 auto; 
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 15px;
-  font-family: arial, sans-serif;
+  font-family: poppins, sans-serif;
+}
+ .button-link {
+	text-decoration: 	none;
+	color:#ffffff;
 }
 
-.button .button-link {
-  text-decoration: none;
-}
-.button a {
-  color: #ffffff;
-}
 /**header section end here**/
 /**footer section start here**/
+
 .footer {
   width: 100%;
-  height: 150px;
-  background-color: #2f2f2f;
+  background-color: #333333;
   text-align: center;
   color: #ffffff;
   padding-top: 40px;
   padding-bottom: 50px;
-  line-height: 25px;
+  line-height:25px;
   font-family: poppins, sans-serif;
 }
-.footer a {
-  color: pink;
-  text-decoration: underline;
+.footer .footer-link{
+	color: pink;
 }
 .website-link {
   margin-top: 100px;
 }
-a:link {
-  text-decoration: none;
+a:link{
 }
 a:hover {
-  color: red;
+  color: #F48AA7;
 }
-#link {
-  text-decoration: underline;
-  color: #000000;
-}
+/**footer section end here**/
