--- a/20-09-2021/green-building-tamplet/assets/css/style.css
+++ b/20-09-2021/green-building-tamplet/assets/css/style.css
@@ -1,89 +1,81 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*{
+	margin: 0px;
+	padding: 0px;
 }
-@font-face {
-  src: url(Poppins-Regular.ttf);
-  font-family: "poppins" sans-serif;
-  font-weight: 400;
+@font-face{
+	src: url(Poppins-Regular.ttf);
+	font-family:'poppins' sans-serif;
+	font-weight:400;
 }
-.tamplate-wrapper {
-  width: 1080px;
+.nav-section-wrapper {
+	padding-top:20px;
+	padding-right:100px;
+	padding-bottom:20px;
+	padding-left: 100px;
 }
-/**nav section start here **/
-.header {
-  padding-top: 18px;
-  padding-right: 130px;
-  padding-left: 110px;
-  padding-right: 110px;
-}
-.logo img {
-  height: 35px;
+.nav-logo-wrapper {
   float: left;
-  display: inline-block;
-  margin-top: 5px;
+}
+.nav-logo img {
+  height: 40px;
+  display:inline-block;
+}
+.nav-item-wrapper{
+	  float:right;	
 }
 .ul-wrapper {
-  float: right;
-  padding-top: 20px;
-  font-weight: 500;
-  font-size: 17px;
+  font-weight:500;
+  font-size:17px;
+  padding-top:10px;
 }
-.ul-wrapper li {
-  display: inline;
-  margin-right: 35px;
-  color: #000000;
-  font-family: arial, sans-serif;
-  float: right;
+.ul-wrapper .nav-item {
+ display:inline;
+ margin-right: 35px;
+ color: #000000;
+ font-family:poppins, sans-serif;
 }
-.ul-wrapper li a {
+.ul-wrapper .nav-link {
   color: black;
-  text-decoration: none;
+  text-decoration:none;
 }
-.ul-wrapper li .active {
-  color: #c11b67;
-  text-decoration: none;
+.ul-wrapper .nav-item .active{
+	color:#C11B67;
+	text-decoration:none;
 }
-.nav-link:hover {
-  color: #f48aa7;
+.nav-link:hover{
+	color:#F48AA7;
 }
 .clear {
   clear: both;
 }
-/**nav section end here**/
-/**header section start here**/
-.section-wrapper {
-  padding-top: 30px;
+.sub-header-section1{
+	width:100%;
+	height: 400px;
+	background-color:#F89143;
 }
-.section-1 {
-  height: 400px;
-  width: 1425px;
-  background-color: #e99035;
+.sub-header-section2{
+	width:100%;
+	height: 535px;
+	background-color:#E7E7E7;
+	position: relative;
 }
-.section-2 {
-  height: 535px;
-  width: 1425px;
-  background-color: #e7e7e7;
-  position: relative;
-}
-.main-section {
-  width: 830px;
+.main-header{
+  width: 55%;
   position: absolute;
-  margin-left: 315px;
-  top: -60%;
+  left:23%;
+  top: -62%;
   background-color: #ffffff;
-  padding-bottom: 8px;
-  box-shadow: 1px 1px 1px #ffffff;
-  margin-bottom: 10px;
+  padding-bottom:10px;
+  box-shadow: 0px 0px 1px #ffffff;
+  margin-bottom:10px;
 }
-.image-wrapper {
-  height: 500px;
+.header-banner-wrapper{
+	height:500px;
 }
-.image-wrapper img {
-  width: 100%;
-  height: 100%;
+.header-banner-wrapper img {
+  width: 100%;	
 }
-.parent-name {
+.sub-company-name {
   font-family: poppins, sans-serif;
   text-align: center;
   font-size: 19px;
@@ -91,7 +83,7 @@
   letter-spacing: 2px;
   margin-top: 30px;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing:2px;
 }
 .company-name {
   text-align: center;
@@ -106,18 +98,27 @@
   text-align: center;
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 20px;
+  margin-top: 33px;
   font-family: poppins, sans-serif;
-  line-height: 24px;
-  font-size: 18px;
+  line-height: 26px;
+  font-size: 17px;
 }
-.parent-company {
+.website-name {
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 33px;
+  margin-bottom: 33px;
   font-family: poppins, sans-serif;
 }
-.button {
+.website-name .website-link{
+  color:#000000;
+  border-bottom: 1px solid #000000;
+  padding-bottom:3px;
+  text-decoration:none;
+}
+.website-link:hover{
+	color:#F48AA7;
+}
+.button  {
   height: 30px;
   width: 200px;
   border: 1px solid #000000;
@@ -125,46 +126,32 @@
   color: #ffffff;
   text-align: center;
   padding-top: 10px;
-  margin: 0 auto;
+  margin:0 auto; 
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 15px;
-  font-family: arial, sans-serif;
-}
-
-.button .button-link {
-  text-decoration: none;
-}
-.button a {
-  color: #ffffff;
-}
-/**header section end here**/
-/**footer section start here**/
-.footer {
-  width: 100%;
-  height: 150px;
-  background-color: #2f2f2f;
-  text-align: center;
-  color: #ffffff;
-  padding-top: 40px;
-  padding-bottom: 50px;
-  line-height: 25px;
   font-family: poppins, sans-serif;
 }
-.footer a {
-  color: pink;
-  text-decoration: underline;
+ .button-link {
+	text-decoration: 	none;
+	color:#ffffff;
 }
-.website-link {
+.footer {
+  width: 100%;
+  background-color: #333333;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 55px;
+  line-height:25px;
+  font-family: poppins, sans-serif;
+}
+.footer .footer-link{
+  color:#F4B0D4;
+}
+.website-footer-link {
   margin-top: 100px;
 }
-a:link {
-  text-decoration: none;
-}
 a:hover {
-  color: red;
-}
-#link {
-  text-decoration: underline;
-  color: #000000;
+   color: #F48AA7;
 }
