--- a/practice-tamplate/assignment-2/assets/css/style.css
+++ b/practice-tamplate/assignment-2/assets/css/style.css
@@ -1,55 +1,157 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*{
+	margin: 0px;
+	padding: 0px;
 }
-@font-face {
-  src: url(Poppins-Regular.ttf);
-  font-family: "poppins" sans-serif;
-  font-weight: 400;
+@font-face{
+	src: url(Poppins-Regular.ttf);
+	font-family:'poppins' sans-serif;
+	font-weight:400;
 }
-/**navigation section start here**/
+.nav-section-wrapper {
+	padding-top:20px;
+	padding-right:100px;
+	padding-bottom:20px;
+	padding-left: 100px;
+}
 .nav-logo-wrapper {
   float: left;
 }
-.tamplate-wrapper {
+.nav-logo img {
+  height: 40px;
+  display:inline-block;
 }
-.nav-logo {
-  height: 35px;
+.nav-item-wrapper{
+	  float:right;	
 }
-.nav-section-wrapper {
-  padding: 25px 0px 110px 130px;
+.ul-wrapper {
+  font-weight:500;
+  font-size:17px;
+  padding-top:10px;
 }
-.nav-item-wrapper .nav-item {
-  float: right;
-  display: inline;
+.ul-wrapper .nav-item {
+ display:inline;
+ margin-right: 35px;
+ color: #000000;
+ font-family:poppins, sans-serif;
+}
+.ul-wrapper .nav-link {
+  color: black;
+  text-decoration:none;
+}
+.ul-wrapper .nav-item .active{
+	color:#C11B67;
+	text-decoration:none;
+}
+.nav-link:hover{
+	color:#F48AA7;
+}
+.clear {
+  clear: both;
+}
+.sub-header-section1{
+	width:100%;
+	height: 400px;
+	background-color:#F89143;
+}
+.sub-header-section2{
+	width:100%;
+	height: 535px;
+	background-color:#E7E7E7;
+	position: relative;
+}
+.main-header{
+  width: 55%;
+  position: absolute;
+  left:23%;
+  top: -62%;
+  background-color: #ffffff;
+  padding-bottom:10px;
+  box-shadow: 0px 0px 1px #ffffff;
+  margin-bottom:10px;
+}
+.header-banner-wrapper{
+	height:500px;
+}
+.header-banner-wrapper img {
+  width: 100%;	
+}
+.sub-company-name {
+  font-family: poppins, sans-serif;
+  text-align: center;
+  font-size: 19px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  margin-top: 30px;
+  text-transform: uppercase;
+  letter-spacing:2px;
+}
+.company-name {
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 50px;
+  margin-top: 15px;
+}
+.name {
+  font-weight: 400;
+}
+.company-bio {
+  text-align: center;
+  margin-left: 30px;
   margin-right: 30px;
+  margin-top: 33px;
+  font-family: poppins, sans-serif;
+  line-height: 26px;
+  font-size: 17px;
+}
+.website-name {
+  text-align: center;
+  margin-top: 33px;
+  margin-bottom: 33px;
   font-family: poppins, sans-serif;
 }
-.nav-link {
-  text-decoration: none;
-  color: #000000;
-  font-size: 19px;
+.website-name .website-link{
+  color:#000000;
+  border-bottom: 1px solid #000000;
+  padding-bottom:0px;
+  text-decoration:none;
 }
-.header-section-wrapper {
+.website-link:hover{
+	color:#F48AA7;
 }
-.sub-header1 {
-  width: 100%;
-  height: 500px;
-  background-color: #f89143;
-}
-.sub-header2 {
-  width: 100%;
-  height: 500px;
-  background-color: #e7e7e7;
-  position: relative;
-}
-.main-header {
+.button  {
+  height: 30px;
+  width: 200px;
   border: 1px solid #000000;
-  position: absolute;
-  top: -85%;
-  left: 25%;
-  width: 50%;
-  height: 500px;
-  background-color: #ffffff;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 10px;
+  margin:0 auto; 
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 15px;
+  font-family: poppins, sans-serif;
 }
-/**footer section end here**/
+ .button-link {
+	text-decoration: 	none;
+	color:#ffffff;
+}
+.footer {
+  width: 100%;
+  background-color: #333333;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 55px;
+  line-height:25px;
+  font-family: poppins, sans-serif;
+}
+.footer .footer-link{
+  color:#F4B0D4;
+}
+.website-footer-link {
+  margin-top: 100px;
+}
+a:hover {
+   color: #F48AA7;
+}
