--- a/practice-tamplate/assignment-4/assets/css/style.css
+++ b/practice-tamplate/assignment-4/assets/css/style.css
@@ -1,41 +1,52 @@
 *{
 	margin: 0px;
-	padding: 0px;.
+	padding: 0px;
 }
 @font-face{
 	src: url(Poppins-Regular.ttf);
 	font-family:'poppins' sans-serif;
 	font-weight:400;
 }
-.nav-logo-wrapper{
-	float:left;
-}
-.nav-logo{
-	height:35px;
-}
-.nav-section-wrapper{
+.nav-section-wrapper {
 	padding-top:20px;
-	padding-left:130px;
-	padding-right:110px;
-	padding-bottom:10px;
+	padding-right:100px;
+	padding-bottom:20px;
+	padding-left: 100px;
 }
-.nav-item-wrapper .nav-item{
-	float:right;
-	display:inline;
-	margin-right:30px;
+.nav-logo-wrapper {
+  float: left;
 }
-.nav-link {
-	text-decoration: none;
-	color: #000000;
-	font-size:19px;
+.nav-logo img {
+  height: 40px;
+  display:inline-block;
 }
-.nav-item-wrapper .nav-item .active{
+.nav-item-wrapper{
+	  float:right;	
+}
+.ul-wrapper {
+  font-weight:500;
+  font-size:17px;
+  padding-top:10px;
+}
+.ul-wrapper .nav-item {
+ display:inline;
+ margin-right: 35px;
+ color: #000000;
+ font-family:poppins, sans-serif;
+}
+.ul-wrapper .nav-link {
+  color: black;
+  text-decoration:none;
+}
+.ul-wrapper .nav-item .active{
 	color:#C11B67;
 	text-decoration:none;
-	font-size:19px;
 }
-.clear{
-	clear: both;
+.nav-link:hover{
+	color:#F48AA7;
+}
+.clear {
+  clear: both;
 }
 .sub-header-section1{
 	width:100%;
@@ -49,13 +60,13 @@
 	position: relative;
 }
 .main-header{
- width: 56%;
+  width: 55%;
   position: absolute;
   left:23%;
   top: -62%;
   background-color: #ffffff;
   padding-bottom:10px;
-  box-shadow: 1px -1px #7A7A7A;
+  box-shadow: 0px 0px 1px #ffffff;
   margin-bottom:10px;
 }
 .header-banner-wrapper{
@@ -63,7 +74,6 @@
 }
 .header-banner-wrapper img {
   width: 100%;
-  height:100%;
 }
 .sub-company-name {
   font-family: poppins, sans-serif;
@@ -90,8 +100,8 @@
   margin-right: 30px;
   margin-top: 33px;
   font-family: poppins, sans-serif;
-  line-height: 24px;
-  font-size: 18px;
+  line-height: 26px;
+  font-size: 17px;
 }
 .website-name {
   text-align: center;
@@ -100,14 +110,14 @@
   font-family: poppins, sans-serif;
 }
 .website-name .website-link{
-	color:#000000;
-	border-bottom: 1px solid #000000;
-	padding-bottom:3px;
-	text-decoration:none;
+  color:#000000;
+  border-bottom: 1px solid #000000;
+  padding-bottom:0px;
+  text-decoration:none;
 }
-.website-link:hover{
+.website-link:hover {
 	color:#F48AA7;
-}
+}					
 .button  {
   height: 30px;
   width: 200px;
@@ -131,18 +141,17 @@
   background-color: #333333;
   text-align: center;
   color: #ffffff;
-  padding-top: 40px;
-  padding-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 55px;
   line-height:25px;
   font-family: poppins, sans-serif;
 }
 .footer .footer-link{
- color: pink;
- text-decoration:none;
+  color:#F4B0D4;
 }
 .website-footer-link {
   margin-top: 100px;
 }
 a:hover {
-  color: #F48AA7;
+   color: #F48AA7;
 }
