--- a/25-09-2021/portfilo-recent-work/assets/css/style.css
+++ b/25-09-2021/portfilo-recent-work/assets/css/style.css
@@ -2,31 +2,37 @@
 	margin: 0px;
 	padding: 0px;
 }
-.nav-main-container{
+/**navigation section start here**/
+.nav-main-container {
 	background-color: #222222;
 	font-family: arial,sans-serif;
-	padding: 18px 0px 18px 100px;
+	padding: 14px 0px 10px 100px;
 }
-.nav-logo-wrapper .nav-logo{
+.nav-logo-wrapper .nav-logo {
 	height:22px;
-	margin-right:25px;
+	margin-right:30px;
 }
-.nav-wrapper{
+.nav-wrapper {
 	width:1170px;
 }
-.nav-logo-wrapper{
+.nav-logo-wrapper {
 	float: left;
 }
-.nav-item-wrapper{
+.nav-item-wrapper {
 	float: left;
 }
-.nav-item{
+.nav-item {
 	display: inline;
-	word-spacing: 40px;
+	word-spacing: 30px;
 }
-.ul-wrapper .nav-item .nav-link{
+.ul-wrapper .nav-item .nav-link {
 	text-decoration: none;
 	color: #9D9D9D;
+}
+.nav-item .active{
+	color:#ffffff;
+	text-decoration: none;
+	background-color:#000000;
 }
 .nav-contact-item{
 	padding: 0px 15px 0px;
@@ -36,11 +42,12 @@
 	text-decoration: none;
 	float: right;
 	color: #9D9D9D;
+	margin-top:2px;
 }
 .clear{
 	clear: both;
 }
-
+/**navigation section end here**/
 /**header section start here**/
 .main-container{
 	width:1170px;
@@ -64,28 +71,34 @@
 .header-banner-wrapper{
 	width: 1170px;
 	padding-top:20px;
-	padding-bottom: 20px;
+	padding-bottom: 15px;
 	font-family: arial,sans-serif;
 }
-	.header-banner{
-		width:47%;
-		float: left;
-		margin-right:28px;
-	}
+.header-banner1 {
+	width:48%;
+	float: left;
+	margin-right:35px;
+}
+.header-banner2  {
+	width:49%;
+	float: left;
+}
 .heading-banner{
-	width:100%;
+	height:324px;
 }
 .banner-heading{
-	margin-top:20px;
+	margin-top:15px;
 	margin-bottom:15px;
 	font-size:28px;
 	font-weight: 100;
 	color:#337AB9;
 }
+.banner-sub-heading{
+	font-size: 17px;
+}
 .button-wrapper{
 	border: 1px solid #DDDDDD;
 	width: 16%;
-
 }
 .button{
 	display: inline;
@@ -93,17 +106,90 @@
 	border-left: 1px solid  #DDDDDD;
 	text-align: center;
 }
+.slide-button-wrapper{
+	display: inline-block;
+	margin-left:500px;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+.slide-button{ 
+	float: left;
+	border: 1px solid  #ddd;
+	text-decoration: none;
+	color: #337AB7;
+	padding: 6px 14px;
+}
+.slide-button-1{
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	float: left;
+	border: 1px solid #ddd;
+	padding: 6px 14px;
+	text-decoration: none;
+	color: #ffffff;
+	background-color: #337AB7;
+}
+.slide-button-5{
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+	float: left;
+	border: 1px solid #ddd;
+	padding: 6px 14px;
+	text-decoration: none;
+	color: #337AB7;
+}
+/**header section end here**/
+/**footer section start here**/
 .stuff-information-wrapper{
-	background-color:#87CEFA;
-
+	background-color: #87CEFA;
+	padding-top: 70px;
+	padding-bottom: 70px;
+	padding-left: 98px;
 }
 .stuff-information{
-	width:30%;
-	margin:0 auto;
+	width: 30%;
 	text-align: center;
+	float: left;
+	margin-right: 10px;
 }
 .person-image{
-	border-radius:49%;
-	height: 100px;
-	
+	border-radius:50%;
+	height: 120px;
 }
+.footer-main-heading{
+	font-family: arial,sans-serif;
+	font-size: 25px;
+	margin-top: 20px;
+	font-weight: 500;
+	color: #1E2B71;
+}
+.person-bio{
+	text-align: center;
+	color: #000000;
+	margin-top:20px;
+	font-family: arial,sans-serif;
+	font-size: 14px;
+	line-height: 1.2;
+	font-weight:100;
+}
+.stuff-button{
+	margin-top: 8px;
+	padding-top: 6px;
+	padding-right: 13px;
+	padding-bottom: 6px;
+	padding-left: 13px;
+	border-radius: 10%;
+	background-color: #337AB7;
+	color: #ffffff;
+	outline: none;
+}
+.stuff-button:link{
+	text-decoration: none;
+}
+.footer-wrapper{
+	padding: 15px 25px;
+	text-align:center;
+	font-family: arial, sans-serif;
+	font-size: 14px;
+}
+/**footer section end here**/
