implement semantics tags

--- a/25-09-2021/portfilo-recent-work/assets/css/style.css
+++ b/25-09-2021/portfilo-recent-work/assets/css/style.css
@@ -184,7 +184,7 @@
   color: #ffffff;
   outline: none;
 }
-.stuff-button:link {
+.stuff-button-link {
   text-decoration: none;
 }
 .footer-wrapper {
