--- a/calender-assingment/11-10-2021/assets/css/style.css
+++ b/calender-assingment/11-10-2021/assets/css/style.css
@@ -1,46 +1,39 @@
-*{
+* {
 	margin: 0px;
 	padding; 0px;
 }
-body{
-	width: 1180px;
+@font-face{
+	src:url("assets/fonts/Sura-Bold.ttf");
+	font-family: Sura, serif;
+	font-weight: bold;
+}
+
+#main-wrapper{
+	width:100px;
 }
 table{
 	padding-top: 40px;
-	padding-left: 40px;
-	
+	padding-left: 40px;	
 }
-.calendar-advertisement-section{
-	vertical-align: super;
-	text-align:left;
+.header-image{
+	height: 420px;
 }
-.advertisement-image-3{
-	margin-top:3px;
-	height:30px;
-	float: left;
+.header-image2{
+	height: 420px;
 }
-.advertisement-image-4{
-	height:52px;
-	margin-top:8px;
-	float: left;
+.month-name{
+	font-size:70px;
+	background-color: #CEBE3F;
+	padding:10px 0px 10px 0px;
+	width:10px;
+	text-align: center;
+	color:#0E1D70;
+	width: 50%;
+	font-weight: bold;
+	font-family: Sura, serif;
 }
-.advertisement-image-5{
-	vertical-align: super;
-	height: 87px;
-	margin-top:5px;
-}
-.advertisement-image-6{
-	vertical-align: super;
-	height: 89px;
-	margin-top:5px;
-	
-}
-.advertisement-image-7{
-	height: 65px;
-}
-.aside-section{
-	vertical-align: top;
-}
-.advertisement-image-9{
-	height: 170px;
+.marathi-month-name{
+	font-size: 50px;
+	width: 20%;
+	background-color: #FBB7C1;
 }
