--- a/calender-assignment-using-div/assets/css/style.css
+++ b/calender-assignment-using-div/assets/css/style.css
@@ -36,7 +36,7 @@ body{
 	display: table-cell;
 	font-size:30px;
 	table-layout: fixed;
-	width: 45%;
+	width: 48%;
 	vertical-align: middle;
 	text-align: center;
 	
@@ -50,7 +50,7 @@ body{
 	display: table-cell;
 	padding: 3px;
 	table-layout: fixed;
-	width: 17%;
+	width: 18%;
 	font-size: 16px;
 	vertical-align: middle;
 	text-align: center;
@@ -79,10 +79,11 @@ body{
 	text-align: center;
 	margin-left: 5px;
 	margin-top: 2px; 
+	margin-bottom: 4px;
 }
 .aside-heading{
 	display: table-cell;
-	padding: 14px 25px 7px 27px;
+	padding: 16px 32px 7px 32px;
 	font-size:80px;
 	background-color: #F6F524;
 	color: #335D3F;
@@ -119,7 +120,7 @@ body{
 	border-top: 1px solid #641E18;	
 	border-left: 1px solid #641E18;	
 	border-bottom: 1px solid #641E18;	
-	padding: 4px 16px 0px 6px;
+	padding: 3px 16px 0px 6px;
 	color: #28429F;
 }
 .highlight1{
@@ -197,7 +198,7 @@ body{
 /** aside section start here**/
 
 .aside-items{
-	margin-bottom: 23px;
+	margin-bottom: 24px;
 	font-weight: bold;
 	margin-left: 5px;
 	font-size:13px;
@@ -230,7 +231,7 @@ body{
 }
 .aside-days-heading{
     font-size: 9px;
-	padding: 13px 3px 3px 3px;
+	padding: 13px 5px 3px 3px;
     width: 21%;
 }
 .aside-table-heading{
@@ -266,4 +267,4 @@ body{
 	margin-top: 5px;
 }
 
-/** footer section footer here**/
+/** footer section end here**/
